<resources>
    <string name="app_name">BruntWork Shop</string>
    <string name="shop">Shop</string>
    <string name="products">Products</string>
    <string name="no_products_available">No products available</string>
    <string name="add">Add</string>
    <string name="cart">Cart</string>
    <string name="no_items_in_cart">No items in cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="checkout">Checkout</string>
    <string name="your_name">Your name</string>
    <string name="name_hint">e.g Jane Doe</string>
    <string name="your_email">Your email</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="email_hint">e.g jane@company.co</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="your_order_has_been_processed">Your order has\nbeen processed</string>
    <string name="your_order_id_is">Your order ID is</string>
    <string name="return_to_products">Return to Products</string>
</resources>