<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.products.ProductsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:gravity="start"
            android:fontFamily="@font/montserrat_extrabold"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:text="@string/checkout"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/checkout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:text="@string/your_name"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/primary"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="16dp"
                        android:textColorHint="@color/primary"
                        android:textColor="@color/primary"
                        android:textSize="21sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="start"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/email"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/name_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="#FF4337"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:text="@string/your_email"
                    android:layout_marginTop="16dp"/>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/primary"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true"
                    app:cardPreventCornerOverlap="false"
                    app:cardCornerRadius="16dp"
                    android:layout_marginTop="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:padding="16dp"
                        android:textColorHint="@color/primary"
                        android:textColor="@color/primary"
                        android:textSize="21sp"
                        android:textAllCaps="false"
                        android:textStyle="bold"
                        android:textAlignment="viewStart"
                        android:fontFamily="@font/montserrat_bold"
                        android:gravity="start"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:imeOptions="actionNext"
                        android:nextFocusForward="@+id/agree"/>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/email_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="#FF4337"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:layout_marginTop="4dp"/>

                <android.widget.CheckBox
                    android:id="@+id/agree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:button="@drawable/on_off"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:textColor="@color/primary"
                    android:textAllCaps="false"
                    android:text="@string/i_agree_to_the_terms_and_conditions"
                    android:padding="8dp"
                    android:layout_marginTop="24dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:backgroundTint="#1947E5"
                    app:cornerRadius="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:includeFontPadding="false"
                    android:layout_marginTop="24dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/primary"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
