<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.products.ProductsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/order_confirmation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:gravity="start"
            android:fontFamily="@font/montserrat_extrabold"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:text="@string/order_confirmation"/>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/order_confirmation"
            app:cardUseCompatPadding="true"
            app:cardPreventCornerOverlap="false"
            android:layout_marginTop="12dp"
            app:strokeColor="@color/primary"
            app:strokeWidth="2dp"
            app:cardCornerRadius="16dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="24dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/center"
                    android:layout_marginBottom="30dp"
                    android:background="#FFBD12"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/orderIcon"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:scaleType="centerInside"
                    app:srcCompat="@drawable/order"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/center"
                    android:layout_marginEnd="20dp" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.4" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_percent="0.5" />

                <TextView
                    android:id="@+id/orderProcessed"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/top"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/orderIcon"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_extrabold"
                    android:textColor="@color/primary"
                    android:textStyle="bold"
                    android:textSize="21sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:text="@string/your_order_has_been_processed"/>

                <TextView
                    android:id="@+id/orderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/orderProcessed"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_medium"
                    android:textColor="#474A58"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false"
                    android:text="@string/your_order_id_is"/>

                <TextView
                    android:id="@+id/orderId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/orderProcessed"
                    app:layout_constraintStart_toEndOf="@+id/orderLabel"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:gravity="start"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="#474A58"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textAlignment="viewStart"
                    android:textAllCaps="false" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/products"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card"
            android:padding="16dp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="16dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="21sp"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/montserrat_extrabold"
            android:includeFontPadding="false"
            android:layout_marginTop="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="@string/return_to_products"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
