<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".features.products.ProductsActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar"
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/primary"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/line"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="24dp"
            android:gravity="start"
            android:fontFamily="@font/montserrat_extrabold"
            android:textColor="@color/primary"
            android:textStyle="bold"
            android:textSize="27sp"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:text="@string/cart"/>

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="#474A57"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:text="@string/no_items_in_cart"
            android:visibility="gone"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cart"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:descendantFocusability="blocksDescendants"
                    android:focusableInTouchMode="false"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/totalContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/total"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/buy"
                        app:layout_constraintTop_toTopOf="@+id/buy"
                        app:layout_constraintBottom_toBottomOf="@+id/buy"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:gravity="start"
                        android:fontFamily="@font/montserrat_extrabold"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:textSize="36sp"
                        android:textAlignment="viewStart"
                        android:textAllCaps="false"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:ellipsize="end"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/buy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:padding="16dp"
                        app:backgroundTint="@color/black"
                        app:cornerRadius="16dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="21sp"
                        android:text="@string/buy_now"
                        android:textAllCaps="false"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:fontFamily="@font/montserrat_extrabold"
                        android:includeFontPadding="false"
                        app:iconGravity="textEnd"
                        app:iconTint="@color/white"
                        app:icon="@drawable/buy" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
